--- a/Esami/Esame_2024_05_28/turno_1/Esercizio3.yaml
+++ b/Esami/Esame_2024_05_28/turno_1/Esercizio3.yaml
@@ -4,7 +4,7 @@ info:
   description: "API per la gestione del Giro d'Italia"
   version: "1.0.0"
 paths:
-  /edizione/{annoEdizione}/tappe:
+  /edizione/{annoEdizione}/tappe/:
     get:
       description: "Elenco di tutte le tappe di un'edizione che abbiano una certa lunghezza"
       operationId: getTappeFromEdizioneAndLunghezza
